fixed spacing for when the window size gets smaller:

--- a/components/style.css
+++ b/components/style.css
@@ -13,6 +13,7 @@ h2 {
   border-radius: 50%;
   width: 400px;
   box-shadow:  0 10px 30px rgba(0,0,0,.5);
+  justify-self: center;
 }
 
 .hidden {
@@ -131,17 +132,27 @@ li a {
   /* For a screen < 960px, this CSS will be read */
   body {
     width: 700px;
+    align-items: center;
   }
+
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   body {
     width: 500px;
+    align-items: center;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   body {
     width: 300px;
+    align-items: center;
+  }
+  .image_circle {
+    width: 280px;
+  }
+  .header h1 {
+    font-size: 60px;
   }
 }
